--- a/MonsterTradingCardGame/MonsterTradingCardGame.csproj
+++ b/MonsterTradingCardGame/MonsterTradingCardGame.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Cryptography.KeyDerivation" Version="6.0.1" />
     <PackageReference Include="Npgsql" Version="6.0.1" />
   </ItemGroup>
 
